# FedEDB

./: Cargo.toml  Experiment-1.py  Experiment-2.py  Experiment-3-local.py  Experiment-3-server.py  Experiment-4-authority.py  Experiment-4-user.py  Experiment-5-authority.py  Experiment-5-owner.py  Experiment-5-server.py  Experiment-5-user .py  Experiment-6-authority.py  Experiment-6-owner.py  Experiment-6-server.py  README.md
src/: lagrange_interpolation.rs  lib.rs  utils.rs
src/commitment_scheme/: mod.rs
src/commitment_scheme/kzg10/: key.rs  mod.rs  srs.rs
src/fft/: domain.rs  mod.rs  polynomial.rs
