[package]
name = "fastv-near"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"

rand = "0.7"
rand_core = { version = "0.5", default-features = false }
serde = "1.0"
serde_derive = "1.0"
merlin = "2.0.0"
dusk-bls12_381 = "0.3.0"
itertools = "0.9.0"
rand_chacha = "0.2"
rayon = "1.3.0"
anyhow = "1.0.32"
dusk-jubjub = "0.8.0"
thiserror = "1.0"
canonical = {version = "0.7.0", optional = true}
chrono = {version = "0.4", features = ['wasmbind']}

[dependencies.amcl_wrapper]
version = "0.3.1"
default-features = false
features = ["bls381"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[features]
nightly = []
trace = []
trace-print = ["trace"]
canon = ["dusk-bls12_381/canon", "dusk-jubjub/canon", "canonical"]
